css update for mobile nav and fix button interaction on mobile

--- a/src/css/modules/talk.scss
+++ b/src/css/modules/talk.scss
@@ -45,6 +45,7 @@
   transform-style: preserve-3d; // Enable 3D positioning for children
   transform-origin: center center;
   position: absolute;
+  pointer-events: none;
 
   .f-96 {
     position: absolute;
